# py-js-template

./: .gitignore  .pre-commit-config-comprehensive.yaml  .pre-commit-config.yaml  LICENSE  README.md  ROLLOUT-PLAN.md  claude.yml  mise.toml
.devcontainer/: README.md  devcontainer.json  init.sh  post-start.sh  setup.sh
.github/scripts/: review.py
.github/workflows/: claude.yml  gemini-review.yml  js-ci-improved.yml  js-ci.yml  python-ci-improved.yml  python-ci.yml  quality-analysis.yml  quality-monitor.yml  review-improved.yml  review.yml  test-skip-ci.yml
.github/workflows/docs/: workflows-improved.md
backend/: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
backend/src/: test_skip_ci.py
backend/src/backend/: exceptions.py  main.py
backend/src/backend/models/: user.py
backend/src/backend/services/: auth_service.py  protocols.py
backend/tests/: test_main.py  test_user_authentication_bdd.py
docs/: README.md  ai-review.md  javascript-guide.md  linting-rules.md  pre-commit-guide.md  python-guide.md  testing-guide.md  workflow-separation-strategy.md  workflows.md
frontend/: .gitignore  .prettierignore  .prettierrc.json  bunfig.toml  eslint.config.js  package-lock.json  package.json  prettier.config.mjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/LoginForm/: LoginForm.css  LoginForm.test.tsx  LoginForm.tsx
frontend/tests/: App.test.tsx
scripts/: analyze-javascript-quality.js  analyze-python-quality.py  auto-quality-issue.sh  auto-stage-formatted.sh  monitor-bypass-usage.sh  pre-commit-incremental.sh  quality-dashboard.sh  setup-branch-protection.sh
